<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/mapRootView"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:weightSum="1"
                android:clickable="true" android:focusable="true" android:focusableInTouchMode="true">

    <TextView
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/data_reading"
            android:id="@+id/readingTextView"
            android:layout_marginStart="33dp" android:layout_marginTop="26dp"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true" android:enabled="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/data_unavailable"
            android:id="@+id/readingValueView"
            android:layout_below="@+id/readingTextView" android:layout_toRightOf="@+id/readingTextView"
            android:layout_toEndOf="@+id/readingTextView"/>
    <Button android:layout_width="194dp" android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/data_target"
            android:id="@+id/targetBtn"
            android:enabled="true" android:clickable="true"
            android:layout_marginTop="39dp" android:layout_below="@+id/readingValueView"
            android:layout_toLeftOf="@+id/readingValueView" android:layout_toStartOf="@+id/readingValueView"/>
    <EditText android:inputType="numberDecimal" android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:id="@+id/targetValueView"
              android:layout_below="@+id/targetBtn"
              android:labelFor="@id/targetValueView" android:layout_alignRight="@+id/readingValueView"
              android:layout_alignEnd="@+id/readingValueView"/>
    <Button android:layout_width="194dp" android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/data_low"
            android:id="@+id/lowBtn"
            android:enabled="true" android:clickable="true" android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/targetBtn" android:layout_alignStart="@+id/targetBtn"/>
    <EditText android:inputType="numberDecimal" android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:id="@+id/lowValueView"
              android:editable="true" android:labelFor="@id/lowValueView"
              android:layout_below="@+id/lowBtn" android:layout_alignStart="@+id/targetValueView"/>
    <Button android:layout_width="194dp" android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/data_high"
            android:id="@+id/highBtn"
            android:textIsSelectable="true"
            android:layout_marginTop="38dp" android:enabled="true" android:focusable="false"
            android:clickable="true" android:layout_below="@+id/lowValueView" android:layout_alignLeft="@+id/lowBtn"
            android:layout_alignStart="@+id/lowBtn"/>
    <EditText android:inputType="numberDecimal" android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:id="@+id/highValueView"
              android:editable="true" android:labelFor="@id/highValueView"
              android:enabled="true"
              android:visibility="visible"
              android:layout_below="@+id/highBtn" android:layout_alignLeft="@+id/lowValueView"
              android:layout_alignStart="@+id/lowValueView"/>
</RelativeLayout>